ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clientsupport-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: clientsupport.local
      http:
        paths:
          - path: /tickets(/.*)?   
            pathType: ImplementationSpecific
            backend:
              service:
                name: ticketservice
                port:
                  number: 80
          - path: /(/.*)? 
            pathType: ImplementationSpecific
            backend:
              service:
                name: authservice
                port:
                  number: 80
